[package]
name = "practice-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
handle-errors = { path = "handle-errors" }
uuid = { version = "1.3.0", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

